--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -21,7 +21,7 @@
         <MCol Cols="4">
             <MCard Class="ma-3" Outlined MinHeight="242" Style="border-radius:16px !important; border: none;">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap; padding-bottom: 12px !important;">
-                    <div class="emphasis2--text h7 text-overflow">@label.TypeName</div>
+                    <div class="emphasis2--text h7 text-overflow font-weight-bold">@label.TypeName</div>
                     <MSpacer />
                     <MButton Icon OnClick="()=>ShowLabelModal(label)">
                         <MIcon Size="20" Color="#323D6F">mdi-pencil</MIcon>
@@ -58,10 +58,12 @@
         <div class="d-flex flex-column" style="width:100%; height:100%; padding:  48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
                 <p style="font-size:14px; font-weight:700; color:#1B2559">@T("Label")</p>
-                <STextField Outlined @bind-Value="_labelModal.Data.TypeName" Label="TypeName"></STextField>
-                <STextField Disabled="_labelModal.HasValue" Class="mt-12" Outlined @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></STextField>
+		<MCard class="d-flex justify-start" Flat Tile>
+                    <STextField Outlined Tile @bind-Value="_labelModal.Data.TypeName" Label="TypeName" class="mr-6"></STextField>
+                    <STextField Disabled="_labelModal.HasValue" Outlined Tile @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></STextField>
+		</MCard>    
                 <p class="mt-12" style="font-size:14px; font-weight:700; color:#1B2559">@T("Label values")</p>
-                <div style="border-radius: 8px; border: 1px solid #E2E7F4;" class="py-3">
+                <div style="border-radius: 8px; border: 1px solid #E2E7F4;" class="pt-3 pb-4">
                     <MRow Style="color: #A3AED0; font-size: 14px;" Class="px-6" NoGutters>
                         <span style="width: 47.5%">Name</span>
                         <span style="width: 47.5%">Code</span>
@@ -70,9 +72,9 @@
                     <MDivider Class="mt-3"></MDivider>
                     @foreach (var item in _labelModal.Data.LabelValues)
                     {
-                        <MRow Class="pt-4 px-6" NoGutters Justify="JustifyTypes.SpaceBetween">
-                            <STextField Style="width: 46.5%" Class="pr-6" Outlined @bind-Value="item.Name" Label="Name"></STextField>
-                            <STextField Style="width: 46.5%" Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
+                        <MRow Class="pt-4 px-4" NoGutters Justify="JustifyTypes.SpaceBetween">
+                            <STextField Style="width: 46.5%" Class="pr-6" TextColor="regular" Outlined @bind-Value="item.Name" Label="Name"></STextField>
+                            <STextField Style="width: 46.5%了;" TextColor="regular" Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
                             <div class="d-flex justify-end align-start ml-6" style="width: 5%; margin-top: 14px;">
                                 <MIcon Disabled="@(_labelModal.Data.LabelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="hover-pointer mr-3">mdi-close</MIcon>
                                 <MIcon OnClick="()=>AddLabelValue(item.Index)" Class="hover-pointer">mdi-plus</MIcon>
