repair navigation height

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -2,7 +2,7 @@
 @inherits MasaCompontentBase
 <MRow style="">
     <MCol Cols="2">
-        <MNavigationDrawer Right Permanent Class="rounded-4" Style="height: 100%;top:0px;transform:translateX(0%);width: 100%;height: calc(100vh - 192px)">
+        <MNavigationDrawer Right Permanent Class="rounded-4" Style="height: 100%;top:0px;transform:translateX(0%);width: 100%;">
             <div style="padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: hidden;">
                 <div style="width:100%;" class="regular--text body2">
                     <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
