--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -21,14 +21,14 @@
         <MCol Cols="4">
             <MCard Class="ma-3" Outlined MinHeight="242" Style="border-radius:16px !important; border: none;">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap; padding-bottom: 12px !important;">
-                    <div class="emphasis2--text h7 text-overflow font-weight-bold">@label.TypeName</div>
+                    <div class="emphasis2--text h7 text-overflow"><span class="font-weight-bold">@label.TypeName</span></div>
                     <MSpacer />
                     <MButton Icon OnClick="()=>ShowLabelModal(label)">
                         <MIcon Size="20" Color="#323D6F">mdi-pencil</MIcon>
                     </MButton>
                 </MCardTitle>
                 <MCardSubtitle>
-                    <div class="text-overflow">@label.TypeCode</div>
+                    <div class="text-overflow regular2--text">@label.TypeCode</div>
                     <div class="mt-4" style="display:-webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;text-overflow: ellipsis;overflow: hidden; color: #485585">
                         @label.Description
                     </div>
@@ -37,15 +37,15 @@
                     <MChipGroup Class="env-cluster-chip-group">
                         @foreach (var item in labelGroup)
                         {
-                            <MChip Color="#F0F3FA" Style="color: #323D6F; font-weight: bold; font-size: 14px;" Class="mr-3" Small>
+                            <MChip Color="#F0F3FA" Style="color: #323D6F; font-size: 14px;" Class="mr-3 font-weight-regular" Small>
                                 @item.Name
                             </MChip>
                         }
                     </MChipGroup>
                     <div class="mx-2 d-flex justify-end regular3--text btn text-overflow" style="margin:16px 0 0 0;">
-                        <span style="font-size: 12px; color: #323D6F;">@label.ModifierName</span>
-                        <span class="mx-2" style="color:#E2E7F4">|</span>
                         <span style="font-size: 12px; color: #A3AED0;">@T("Edit in") @label.ModificationTime.Humanize(utcDate: true, culture:I18n.Culture)</span>
+                        <span class="mx-2" style="color:#E2E7F4">|</span>
+                        <span style="font-size: 12px; color: #323D6F;">@label.ModifierName</span>
                     </div>
                 </div>
             </MCard>
