solve style at rollback modal

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -37,11 +37,11 @@
         </MTimeline>
         @if (FormatLabelCode.ToLower() == "properties")
         {
-            <div style="border-radius:8px; border:1px solid #E2E7F4;" class="py-3 mt-4">
+            <div style="border-radius:8px; border:1px solid #E2E7F4;" class="pb-3 pt-1 mt-4">
                 <MDataTable Headers="_headers"
                         TItem="ConfigObjectPropertyModel"
                         Items="@_properties"
-                        Class="table-border-none"
+                        Class="table-header-border-1"
                         DisableSort
                         HideDefaultFooter>
                     <HeaderColContent Context="header">
