fix:The format of the configuration information in the rollback popup is incorrect.resolved #396

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseHistoryModal.razor
@@ -149,7 +149,7 @@
 <RollbackModal @ref="_releaseHistoryRollbackModal"
                ModalKey="@($"releaseHistoryRollbackModal{_showRollbackModal}")"
                @bind-Value="_showRollbackModal"
-               FormatLabelCode="_formatLabelCode"
+               FormatLabelCode="@_formatLabelCode"
                CurrentConfigObjectRelease="_currentConfigObjectRelease"
                RollbackConfigObjectRelease="_rollbackConfigObjectRelease"
                OnClick="async ()=>{ await RollbackAsync(_releaseHistory); }"
