fix:Roll back the pop-up and remove the version number below the release name. resolved #375

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -19,7 +19,7 @@
                 <ChildContent>
                     <div>
                         <div style="font-size:14px; font-weight: 500; color: #1B2559;">@CurrentConfigObjectRelease.Name</div>
-                        <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@CurrentConfigObjectRelease.Version</div>
+                        @*<div style="font-size:10px; font-weight: 400; color: #A3AED0;">@CurrentConfigObjectRelease.Version</div>*@
                     </div>
                 </ChildContent>
             </MTimelineItem>
@@ -30,7 +30,7 @@
                 <ChildContent>
                     <div>
                         <div style="font-size:14px; font-weight: 500; color: #1B2559;">@RollbackConfigObjectRelease.Name</div>
-                        <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@RollbackConfigObjectRelease.Version</div>
+                        @*<div style="font-size:10px; font-weight: 400; color: #A3AED0;">@RollbackConfigObjectRelease.Version</div>*@
                     </div>
                 </ChildContent>
             </MTimelineItem>
