--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -798,3 +798,7 @@ textarea:disabled {
 .m-timeline::before {
     background: #E4E8F3 !important;
 }
+
+.remove-bg-after::after {
+    background: none !important;
+}
