--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -1,12 +1,12 @@
 ﻿@inherits MasaComponentBase
 
-<SModal @key="@ModalKey" Width="684" Title="@T("Rollback")" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="HandOnClickAsync">
+<SModal @key="@ModalKey" Width="684" Title="@T("Rollback")" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="HandOnClickAsync" BodyStyle="padding-top: 0px">
     <ChildContent>
         <MAlert Dense
                 Type="AlertTypes.Warning">
             @T("This operation will be rolled back to the previous release version, and the current version will be invalidated, but it will not affect the configuration being modified")
         </MAlert>
-        <MTimeline Style="position:relative; left:-228px;">
+        <MTimeline Style="position:relative; left:-252px;">
             <MTimelineItem Color="primary" Small Right>
                 <OppositeContent>
                     <div>
@@ -35,11 +35,11 @@
         </MTimeline>
         @if (FormatLabelCode.ToLower() == "properties")
         {
-            <div style="border-radius:8px; border:1px solid #E2E7F4;" class="py-3 mt-4">
+            <div style="border-radius:8px; border:1px solid #E2E7F4;" class="pb-3 pt-1 mt-4">
                 <MDataTable Headers="_headers"
                         TItem="ConfigObjectPropertyModel"
                         Items="@_properties"
-                        Class="table-border-none"
+                        Class="table-header-border-1"
                         DisableSort
                         HideDefaultFooter>
                     <HeaderColContent Context="header">
@@ -74,8 +74,8 @@
         {
             <div class="py-3">
                 <MRow NoGutters>
-                    <MTextarea Label="@(T("Before rollback"))" Class="rounded-r-0" MinHeight="300" HideDetails="true" Outlined Readonly Value="@CurrentConfigObjectRelease?.Content"></MTextarea>
-                    <MTextarea Label="@(T("After rollback"))" Class="rounded-l-0" MinHeight="300" HideDetails="true" Outlined Readonly Value="@RollbackConfigObjectRelease?.Content"></MTextarea>
+                    <MTextarea Label="@(T("Before rollback"))" Class="rounded-r-0" TextColor="emphasis2" MinHeight="300" HideDetails="true" Outlined Readonly Value="@CurrentConfigObjectRelease?.Content"></MTextarea>
+                    <MTextarea Label="@(T("After rollback"))" Class="rounded-l-0" TextColor="emphasis2" MinHeight="300" HideDetails="true" Outlined Readonly Value="@RollbackConfigObjectRelease?.Content"></MTextarea>
                 </MRow>
             </div>
         }
