--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -183,7 +183,7 @@
                                                 TItem="ConfigObjectPropertyModel"
                                                 Items="@configObject.ConfigObjectPropertyContents"
                                                 Class="table-border-none"
-                                                                        HideDefaultFooter>
+                                                HideDefaultFooter>
                                                 <HeaderColContent Context="header">
                                                     <span class="regular3--text btn">@header.Text</span>
                                                 </HeaderColContent>
@@ -204,7 +204,7 @@
                                                                     color = "#7681AB";
                                                                     text = @T("UnReleased");
                                                                 }
-                                                                <MIcon Style="margin-bottom:2px;" Size="20" Color="@color">@icon</MIcon>
+                                                                <MIcon Style="margin-bottom:2px;" Class="mr-1" Size="20" Color="@color">@icon</MIcon>
                                                                 <span style="color: @color;">@text</span>
                                                                 break;
                                                             case "Operation":
@@ -248,9 +248,10 @@
                                                             @switch (@context.Header.Value)
                                                                 {
                                                                     case nameof(ConfigObjectPropertyModel.IsPublished):
-                                                                        if (context.Item.IsPublished)
+                                                                        <div class="d-inline-flex m-0 p-0">
+                                                                        @if (context.Item.IsPublished)
                                                                         {
-                                                                            <MIcon Style="margin-bottom:2px;color: #05CD99 !important;" Size="16">mdi-link-variant</MIcon>
+                                                                            <MIcon Class="mr-1" Style="margin-bottom:2px;color: #05CD99 !important;" Size="16">mdi-link-variant</MIcon>
                                                                             <span class="green--text">@T("Released")</span>
                                                                         }
                                                                         else
@@ -269,6 +270,7 @@
                                                                             }
                                                                             <span>@T("UnReleased")</span>
                                                                         }
+                                                                        </div>
                                                                         break;
                                                                     case "Operation":
                                                                         @if (!context.Item.IsDeleted)
