fix:Clone the configuration object. When the pop-up window opens, the configuration object will disappear. resolved #372

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -415,7 +415,7 @@
                      SelectConfigObject="_selectConfigObject"
 />
 <CloneModal @ref="_cloneModal"
-            ConfigObjects="_configObjects"
+            ConfigObjects="_configObjects.DeepClone()"
             SelectCluster="_selectCluster"
             ConfigObjectType="ConfigObjectType"
             AppDetail="_appDetail"
