--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -15,3 +15,4 @@
 @using System.Reflection;
 @using Masa.BuildingBlocks.StackSdks.Config;
 @using Masa.Contrib.StackSdks.Config;
+@using Force.DeepCloner;
