--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -43,7 +43,7 @@
                         DisableSort
                         HideDefaultFooter>
                     <HeaderColContent Context="header">
-                        <span class="regular3--text btn">@header.Text</span>
+                        <span class="regular3--text btn">@T(header.Text)</span>
                     </HeaderColContent>
                     <ItemColContent>
                         @switch (@context.Header.Text)
