fix: Replace 'Publish' with 'Release' and locale list in rollback modal

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -72,7 +72,7 @@
         </MButton>
     }
     <MButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="ReleaseConfig">
-        <SIcon Tooltip="@T("Publish")" Color="#323D6F">mdi-send</SIcon>
+        <SIcon Tooltip="@T("Release")" Color="#323D6F">mdi-send</SIcon>
     </MButton>
     <MMenu OffsetY>
         <ActivatorContent>
