fix: solve merge confict

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -36,7 +36,7 @@
         @if (FormatLabelCode.ToLower() == "properties")
         {
             <div style="border-radius:8px; border:1px solid #E2E7F4;" class="pb-3 pt-1 mt-4">
-                <MDataTable Headers="RollbackHeaders"
+                <MDataTable Headers="_headers"
                         TItem="ConfigObjectPropertyModel"
                         Items="@_properties"
                         Class="table-header-border-1"
