--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -6,9 +6,9 @@
         {
             <div class="d-flex flex-column justify-center align-center" style="color: #A3AED0;">
                 <div>
-                    @T("Clone")&nbsp;
+                    @T("Clone")
                     <span style="font-size: 20px; font-weight: bold; color: #323D6F;">
-                        "@ProjectDetail.Name"-"@AppDetail.Name"-"<span style="@($"color: {SelectCluster.EnvironmentColor} !important")">@SelectCluster.EnvironmentName</span>"-"@SelectCluster.ClusterName"
+                        "@AppDetail.Name"-"<span style="@($"color: {SelectCluster.EnvironmentColor} !important")">@SelectCluster.EnvironmentName</span>"-"@SelectCluster.ClusterName"
                     </span>
                     @if (_isCloneAll)
                     {
